<resources>
    <string name="app_name">Waves 2018</string>
    <string name="item_1">Events</string>
    <string name="item_2">Voting</string>
    <string name="item_3">Home</string>
    <string name="item_4">Live Now</string>
    <string name="item_5">Winners</string>

    <string name="day_0">Day 0</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="title_activity_nights">Nights</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="waves_id">Waves ID</string>
    <string name="login">Login</string>
    <string name="waves_password">Password</string>
    <string name="facebook_app_id">1876741525958291</string>
    <string name="fb_login_protocol_scheme">fb1876741525958291</string>

    //Temp:
    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>
    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="event_0">Spin Off</string>
    <string name="event_1">Natyanjali</string>
    <string name="event_2">Sizzle</string>
    <string name="event_3">Dancing Duo</string>
    <string name="event_4">Rangmanch</string>
    <string name="event_5">Nukkad Natak</string>
    <string name="event_6">Skime</string>
    <string name="event_7">Indian Rock</string>
    <string name="waves_2018">Waves 2018</string>

    <string-array name="events_array">
        <item>Spin Off</item>
        <item>Natyanjali</item>
        <item>Sizzle</item>
        <item>Dancing Duo</item>
        <item>Rangmanch</item>
        <item>Nukkad Natak</item>
        <item>Skime</item>
        <item>Indian Rock</item>
    </string-array>

</resources>
