<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_events"
        android:icon="@drawable/ic_events"
        android:title="@string/item_1"/>
    <item
        android:id="@+id/bottom_nav_spoton"
        android:icon="@drawable/ic_fire"
        android:title="@string/item_2"/>
    <item
        android:id="@+id/bottom_nav_home"
        android:icon="@drawable/ic_stat_name"
        android:title="@string/item_3"/>
    <item
        android:id="@+id/bottom_nav_nights"
        android:icon="@drawable/ic_speaker"
        android:title="@string/item_4"/>
    <item
        android:id="@+id/bottom_nav_winners"
        android:icon="@drawable/ic_stars_black_24dp"
        android:title="@string/item_5"/>
</menu>